kubernetes/clusters/homelab/apps/feishin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feishin
  namespace: feishin
  labels:
    app.kubernetes.io/name: feishin
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: feishin
  template:
    metadata:
      labels:
        app.kubernetes.io/name: feishin
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: feishin
          image: ghcr.io/jeffvli/feishin:1.17.0@sha256:6c75a4d3b99065ac245e2eb2b693fde3e5f2a6fe41c9e255da4fcb8948071965
          securityContext:
            readOnlyRootFilesystem: true
          ports:
            - name: http
              containerPort: 9180
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: 9180
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
          volumeMounts:
            - name: tmp-volume
              mountPath: /tmp
            - name: conf-volume
              mountPath: /etc/nginx/conf.d
      volumes:
        - name: tmp-volume
          emptyDir: {}
        - name: conf-volume
          emptyDir: {}
